--- a/public/pages/systems.html
+++ b/public/pages/systems.html
@@ -20,38 +20,65 @@
           <div class="card mb-2" >
             <div class="card-body">
               <div v-if="typeof value === 'object'" class="p-0 pl-2 pr-2 " v-for="(currentValue, defaultValue) of value">
-                <command-input-with-permission
-                  v-if="category === 'commands'"
-                  class="pt-1 pb-1"
-                  v-bind:type="typeof currentValue"
-                  v-bind:value="currentValue"
-                  v-bind:command="defaultValue"
-                  :permissions="settings._permissions[defaultValue]"
-                  v-on:update="value[defaultValue] = $event.value; settings._permissions[defaultValue] = $event.permissions; triggerDataChange()"
-                ></command-input-with-permission>
-                <toggle
-                  class="pt-1 pb-1"
-                  v-bind:title="commons.translate('systems.' + selectedSystem + '.settings.' + defaultValue)"
-                  v-else-if="typeof currentValue === 'boolean'"
-                  v-bind:value="currentValue"
-                  v-on:update="value[defaultValue] = !value[defaultValue]; triggerDataChange()"
-                ></toggle>
-                <textarea-from-array
-                  class="pt-1 pb-1"
-                  v-else-if="currentValue.constructor === Array"
-                  v-bind:value="currentValue"
-                  v-bind:title="commons.translate('systems.' + selectedSystem + '.settings.' + defaultValue)"
-                  v-on:update="value[defaultValue] = $event; triggerDataChange()"
-                ></textarea-from-array>
-                <text-input
-                  v-else
-                  class="pt-1 pb-1"
-                  v-bind:type="typeof currentValue"
-                  v-bind:value="currentValue"
-                  v-bind:title="'systems.' + selectedSystem + '.settings.' + defaultValue"
-                  :permission="settings._permissions[defaultValue]"
-                  v-on:update="value[defaultValue] = $event.value; triggerDataChange()"
-                ></text-input>
+                <template v-if="typeof ui[category] !== 'undefined' && typeof ui[category][defaultValue] !== 'undefined'">
+                  <component
+                    :is="ui[category][defaultValue].type"
+                    :readonly="ui[category][defaultValue].readOnly"
+                    :secret="ui[category][defaultValue].secret"
+                    :step="ui[category][defaultValue].step"
+                    :min="ui[category][defaultValue].min"
+                    :max="ui[category][defaultValue].max"
+                    :value="currentValue"
+                    :values="ui[category][defaultValue].values"
+                    @update="value[defaultValue] = $event.value; triggerDataChange()"
+                    :title="'systems.' + selectedSystem + '.settings.' + defaultValue"
+                    :current="value[ui[category][defaultValue].current]"
+                    class="pt-1 pb-1"></component>
+                </template>
+                <template v-else>
+                  <command-input-with-permission
+                    v-if="category === 'commands'"
+                    class="pt-1 pb-1"
+                    v-bind:type="typeof currentValue"
+                    v-bind:value="currentValue"
+                    v-bind:command="defaultValue"
+                    :permissions="settings._permissions[defaultValue]"
+                    v-on:update="value[defaultValue] = $event.value; settings._permissions[defaultValue] = $event.permissions; triggerDataChange()"
+                  ></command-input-with-permission>
+                  <toggle
+                    class="pt-1 pb-1"
+                    v-bind:title="commons.translate('systems.' + selectedSystem + '.settings.' + defaultValue)"
+                    v-else-if="typeof currentValue === 'boolean'"
+                    v-bind:value="currentValue"
+                    v-on:update="value[defaultValue] = !value[defaultValue]; triggerDataChange()"
+                  ></toggle>
+                  <textarea-from-array
+                    class="pt-1 pb-1"
+                    v-else-if="currentValue.constructor === Array"
+                    v-bind:value="currentValue"
+                    v-bind:title="commons.translate('systems.' + selectedSystem + '.settings.' + defaultValue)"
+                    v-on:update="value[defaultValue] = $event; triggerDataChange()"
+                  ></textarea-from-array>
+                  <number-input
+                    v-else-if="typeof currentValue === 'number'"
+                    class="pt-1 pb-1"
+                    v-bind:type="typeof currentValue"
+                    v-bind:value="currentValue"
+                    min="0"
+                    v-bind:title="'systems.' + selectedSystem + '.settings.' + defaultValue"
+                    :permission="settings._permissions[defaultValue]"
+                    v-on:update="value[defaultValue] = $event.value; triggerDataChange()">
+                  </number-input>
+                  <text-input
+                    v-else
+                    class="pt-1 pb-1"
+                    v-bind:type="typeof currentValue"
+                    v-bind:value="currentValue"
+                    v-bind:title="'systems.' + selectedSystem + '.settings.' + defaultValue"
+                    :permission="settings._permissions[defaultValue]"
+                    v-on:update="value[defaultValue] = $event.value; triggerDataChange()"
+                  ></text-input>
+                </template>
               </div>
             </div>
           </div>
@@ -113,6 +140,7 @@
       components: {
         'toggle': toggleEnable,
         'text-input': textInput,
+        'number-input': numberInput,
         'command-input-with-permission': commandInputWithPermissions,
         'textarea-from-array': textAreaFromArray
       },
@@ -121,6 +149,7 @@
         listOfSystems: [],
         selectedSystem: null,
         settings: { settings: {} },
+        ui: { settings: {} },
         isDataChanged: false,
 
         state: {
@@ -151,11 +180,12 @@
           this.settings = { settings: {} }
           this.state.settings = 0
           this.state.loading = 1
-          this.socket[system].emit('settings', (err, settings) => {
+          this.socket[system].emit('settings', (err, settings, ui) => {
             if (system !== this.selectedSystem) return // skip if we quickly changed system
 
             this.state.loading = 0
             let _settings = _(settings).toPairs().value()
+            let _ui = _(ui).toPairs().value()
 
             // sorting
             // enabled is first
@@ -172,6 +202,21 @@
             // commands at last
             for (let [name, value] of _(_settings.filter(o => o[0] === 'commands')).value()) {
               this.settings[name] = value
+            }
+
+            // ui
+            // everything else except commands and enabled and are string|number|bool
+            for (let [name, value] of _(_ui.filter(o => o[0] !== '_' && o[0] !== 'enabled' && o[0] !== 'commands' && typeof o[1] !== 'object')).value()) {
+              if (typeof this.settings.settings[name] === 'undefined') this.settings.settings[name] = null
+              this.ui.settings[name] = value
+            }
+            // everything else except commands and enabled and are objects -> own category
+            for (let [name, value] of _(_ui.filter(o => o[0] !== '_' && o[0] !== 'enabled' && o[0] !== 'commands' && typeof o[1] === 'object')).value()) {
+              if (typeof this.settings[name] === 'undefined') this.settings[name] = {}
+              for (let [k, v] of Object.entries(value)) {
+                if (typeof this.settings[name][k] === 'undefined') this.settings[name][k] = null
+              }
+              this.ui[name] = value
             }
             this.isDataChanged = false
           })
