--- a/public/pages/games.html
+++ b/public/pages/games.html
@@ -69,6 +69,15 @@
                     v-bind:title="commons.translate('games.' + selectedGames + '.settings.' + defaultValue)"
                     v-on:update="value[defaultValue] = $event; triggerDataChange()"
                   ></textarea-from-array>
+                  <number-input
+                    v-else-if="typeof currentValue === 'number'"
+                    class="pt-1 pb-1"
+                    v-bind:type="typeof currentValue"
+                    v-bind:value="currentValue"
+                    v-bind:title="'systems.' + selectedGames + '.settings.' + defaultValue"
+                    :permission="settings._permissions[defaultValue]"
+                    v-on:update="value[defaultValue] = $event.value; triggerDataChange()">
+                  </number-input>
                   <text-input
                     v-else
                     class="pt-1 pb-1"
@@ -140,6 +149,7 @@
       components: {
         'toggle': toggleEnable,
         'text-input': textInput,
+        'number-input': numberInput,
         'command-input-with-permission': commandInputWithPermissions,
         'textarea-from-array': textAreaFromArray,
         'wheel-of-fortune-responses': wofResponses,
@@ -151,7 +161,7 @@
         listOfGames: [],
         selectedGames: null,
         settings: { settings: {} },
-        ui: {},
+        ui: { settings: {} },
         isDataChanged: false,
 
         state: {
@@ -186,8 +196,7 @@
             if (system !== this.selectedGames) return
             this.state.loading = 0
             let _settings = _(settings).toPairs().value()
-
-            this.ui = ui
+            let _ui = _(ui).toPairs().value()
 
             // sorting
             // enabled is first
@@ -206,12 +215,19 @@
               this.settings[name] = value
             }
 
-            // check if all ui is in settings to be shown
-            for (let key of Object.keys(this.ui)) {
-              if (!this.settings[key]) this.settings[key] = {}
-              for (let k of Object.keys(this.ui[key])) {
-                this.settings[key][k] = this.settings[key][k] || null
+            // ui
+            // everything else except commands and enabled and are string|number|bool
+            for (let [name, value] of _(_ui.filter(o => o[0] !== '_' && o[0] !== 'enabled' && o[0] !== 'commands' && typeof o[1] !== 'object')).value()) {
+              if (typeof this.settings.settings[name] === 'undefined') this.settings.settings[name] = null
+              this.ui.settings[name] = value
+            }
+            // everything else except commands and enabled and are objects -> own category
+            for (let [name, value] of _(_ui.filter(o => o[0] !== '_' && o[0] !== 'enabled' && o[0] !== 'commands' && typeof o[1] === 'object')).value()) {
+              if (typeof this.settings[name] === 'undefined') this.settings[name] = {}
+              for (let [k, v] of Object.entries(value)) {
+                if (typeof this.settings[name][k] === 'undefined') this.settings[name][k] = null
               }
+              this.ui[name] = value
             }
 
             this.isDataChanged = false
