--- a/public/pages/overlays.html
+++ b/public/pages/overlays.html
@@ -39,11 +39,14 @@
                 </template>
               </div>
               <div v-if="typeof value === 'object' && !defaultValue.startsWith('_') && currentValue !== null" class="p-0 pl-2 pr-2 " v-for="(currentValue, defaultValue) of value">
-                <template v-if="typeof ui[category] !== 'undefined' && ui[category][defaultValue]">
+                <template v-if="typeof ui[category] !== 'undefined' && typeof ui[category][defaultValue] !== 'undefined'">
                   <component
                     :is="ui[category][defaultValue].type"
                     :readonly="ui[category][defaultValue].readOnly"
                     :secret="ui[category][defaultValue].secret"
+                    :step="ui[category][defaultValue].step"
+                    :min="ui[category][defaultValue].min"
+                    :max="ui[category][defaultValue].max"
                     :value="currentValue"
                     :values="ui[category][defaultValue].values"
                     @update="value[defaultValue] = $event.value; triggerDataChange()"
@@ -75,6 +78,15 @@
                     v-bind:title="commons.translate('systems.' + selected + '.settings.' + defaultValue)"
                     v-on:update="value[defaultValue] = $event; triggerDataChange()"
                   ></textarea-from-array>
+                  <number-input
+                    v-else-if="typeof currentValue === 'number'"
+                    class="pt-1 pb-1"
+                    v-bind:type="typeof currentValue"
+                    v-bind:value="currentValue"
+                    v-bind:title="'systems.' + selected + '.settings.' + defaultValue"
+                    :permission="settings._permissions[defaultValue]"
+                    v-on:update="value[defaultValue] = $event.value; triggerDataChange()">
+                  </number-input>
                   <text-input
                     v-else
                     class="pt-1 pb-1"
@@ -290,6 +302,7 @@ var social = {
       components: {
         'toggle': toggleEnable,
         'text-input': textInput,
+        'number-input': numberInput,
         'command-input-with-permission': commandInputWithPermissions,
         'textarea-from-array': textAreaFromArray,
         'selector': selector,
@@ -304,7 +317,7 @@ var social = {
         list: [],
         selected: null,
         settings: { settings: {} },
-        ui: {},
+        ui: { settings: {} },
         isDataChanged: false,
 
         state: {
@@ -345,13 +358,12 @@ var social = {
           this.settings = { settings: {} }
           this.state.settings = 0
           this.state.loading = 1
-          this.socket[system].emit('settings', (err, settings, ui) => {
+          this.socket[system].emit('settings', (err, setting, ui) => {
             if (system !== this.selected) return // skip if we quickly changed system
 
-            this.ui = ui
-
             this.state.loading = 0
-            let _settings = _(settings).toPairs().value()
+            let _settings = _(setting).toPairs().value()
+            let _ui = _(ui).toPairs().value()
 
             // sorting
             this.settings.settings = {}
@@ -368,12 +380,20 @@ var social = {
               this.settings[name] = value
             }
 
-            // check if all ui is in settings to be shown
-            for (let key of Object.keys(this.ui)) {
-              if (!this.settings[key]) this.settings[key] = {}
-              for (let k of Object.keys(this.ui[key])) this.settings[key][k] = this.settings[key][k] || null
+            // ui
+            // everything else except commands and enabled and are string|number|bool
+            for (let [name, value] of _(_ui.filter(o => o[0] !== '_' && o[0] !== 'enabled' && o[0] !== 'commands' && typeof o[1] !== 'object')).value()) {
+              if (typeof this.settings.settings[name] === 'undefined') this.settings.settings[name] = null
+              this.ui.settings[name] = value
             }
-
+            // everything else except commands and enabled and are objects -> own category
+            for (let [name, value] of _(_ui.filter(o => o[0] !== '_' && o[0] !== 'enabled' && o[0] !== 'commands' && typeof o[1] === 'object')).value()) {
+              if (typeof this.settings[name] === 'undefined') this.settings[name] = {}
+              for (let [k, v] of Object.entries(value)) {
+                if (typeof this.settings[name][k] === 'undefined') this.settings[name][k] = null
+              }
+              this.ui[name] = value
+            }
             this.isDataChanged = false
           })
         },
