commands: add hold to delete to list

--- a/public/pages/cooldown/list.html
+++ b/public/pages/cooldown/list.html
@@ -106,7 +106,8 @@
       el: '#systemCooldownApp',
       components: {
         'toggle': toggleEnable,
-        'command-input': commandInput
+        'command-input': commandInput,
+        'hold-button': holdButton
       },
       data: {
         showAs: 'cards',
