--- a/public/pages/ranks/list.html
+++ b/public/pages/ranks/list.html
@@ -37,7 +37,7 @@
           <div class="card-body border-top p-0 text-right">
             <div class="btn-group" role="group">
               <a v-bind:href="'?id='+ item._id + '#ranks/edit'" class="btn btn-outline-dark p-3 border-0"><i class="fas fa-pencil-alt mr-1" aria-hidden="true"></i> {{ commons.translate('dialog.buttons.edit') }}</a>
-              <button type="button" type="button" v-on:click="deleteItem(item._id)" class="btn btn-outline-dark p-3 border-0"><i class="far fa-trash-alt mr-1" aria-hidden="true"></i> {{ commons.translate('delete') }}</button>
+              <hold-button class="btn-outline-dark p-3 border-0" @trigger="deleteItem(item._id)" :holdtitle="commons.translate('dialog.buttons.hold-to-delete')" :title="commons.translate('dialog.buttons.delete')" icon="fa-trash"></hold-button>
             </div>
           </div>
         </div>
@@ -53,7 +53,7 @@
             <div class="col-md-2">
               <div class="p-0 text-right">
                 <a v-bind:href="'?id='+ item._id + '#ranks/edit'" v-bind:title="commons.translate('dialog.buttons.edit')" class="btn btn-outline-dark p-1 border-0"><i class="fas fa-pencil-alt m-1" aria-hidden="true"></i></a>
-                <button type="button" v-on:click="deleteItem(item._id)" v-bind:title="commons.translate('delete')" class="btn btn-outline-dark p-1 border-0"><i class="far fa-trash-alt m-1" aria-hidden="true"></i></button>
+                <hold-button class="btn-outline-dark p-1 border-0" @trigger="deleteItem(item._id)" holdtitle="" title="" icon="fa-trash m-1"></hold-button>
               </div>
             </div>
           </div>
@@ -73,7 +73,8 @@
       components: {
         'toggle': toggleEnable,
         'command-input': commandInput,
-        'text-with-tags': textWithTags
+        'text-with-tags': textWithTags,
+        'hold-button': holdButton
       },
       data: {
         showAs: 'cards',
@@ -118,7 +119,7 @@
       },
       methods: {
         updateItem: function (_id) {
-          this.socket.emit('update', this.items.filter((o) => o._id === _id))
+          this.socket.emit('update', { items: this.items.filter((o) => o._id === _id) })
         },
         deleteItem: function (id) {
           this.socket.emit('delete', {_id: id}, () => {
